# CFDs-2026

./: README.md
correlation-and-sampling/: README.md  requirements.txt
correlation-and-sampling/correlation_extraction/: correlation_extraction.py  correlation_extraction_GCFD.py  correlation_extraction_tf.py  correlation_extraction_tf_multi.py  output.txt
correlation-and-sampling/correlation_extraction/storage/: embedding_to_disk.py
correlation-and-sampling/sampling/: dbscan_sample.py  fast_dbscan_sampling.py  file1.txt  file1_lose.txt  file2.txt  file2_filter.txt  generate_sub_tables.py  k_means_sample.py  k_means_with_dbscan.py  k_means_with_dbscan_v2.py  lhs_rhs.py  output.csv  output.txt  rep_with_kmeans.py  representative_tuple_sampling.py  same_cfds.py  sample_utils.py  verify.py  verify_v2.py  verify_v3.py
correlation-and-sampling/sampling/GCFD/: GCFD_sample.py  GCFD_utils.py  file1.txt  file2.txt  output.csv  random.csv  random_sample.py  rep_sampling.py  same_cfds.py  test.py  verify_GCFD.py  verify_GCFD_v2.py  verify_GCFD_v3.py  verify_GCFD_v4.py
correlation-and-sampling/sampling/GCFD/initial_output/: file1.txt  output.csv
correlation-and-sampling/sampling/tensor_to_numpy/: tensor_to_numpy.py
correlation-and-sampling/tests/: test_compute_embeddings.py  test_util.py
correlation-and-sampling/utils/: csv_from_data.py  rem_row_col_from_csv.py  remove_columns_from_csv.py  remove_empty_lines.py  remove_lines_from_csv.py  txt_to_csv.py  utils.py  utils_GCFDS.py  utils_GCFDS_v2.py  utils_GCFDS_v3.py  utils_correlation.py  utils_correlation_GCFD.py  utils_correlation_plus.py  utils_initial.py  utils_large.py  utils_large_2.py  utils_large_row.py  utils_large_row_sampling.py  utils_large_v6.py  utils_rep_with_kmeans.py  utils_representative_sampling.py
parallel/SCFDM_all/: CMakeLists.txt  input.txt  main.cpp  readme.md
parallel/SCFDM_all/datasets/: flight_sample.csv
parallel/SCFDM_part/: CMakeLists.txt  input.txt  main.cpp  readme.md
parallel/SCFDM_part/algorithms/: ccfdminer.cpp  ccfdminer.h
